--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     }
   },
   "scripts": {
+    "all": "yarn format && yarn lint && yarn build && yarn test",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "build:esm": "tsc -p tsconfig.esm.json",
