--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     "target": "ES2020",
     "lib": ["ES2020"],
+    "moduleResolution": "bundler",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
     "resolveJsonModule": true,
-    "moduleResolution": "bundler"
+    "declaration": true
   }
 }
