--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ssh-backend-connector",
-  "version": "1.0.0",
+  "version": "0.5.0",
   "author": "Dan Forsberg <dforsber@gmail.com>",
   "license": "MIT",
   "type": "module",
@@ -13,6 +13,7 @@
     }
   },
   "scripts": {
+    "release": "standard-version -a",
     "all": "yarn format && yarn lint && yarn build && yarn test",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
@@ -28,7 +29,8 @@
   },
   "dependencies": {
     "electron-store": "^10.0.0",
-    "ssh2": "^1.16.0"
+    "ssh2": "^1.16.0",
+    "standard-version": "^9.5.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
