--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
           yarn install --frozen-lockfile
           yarn build
           yarn lint
-          yarn test:unit
+          yarn test
 
   publish-npmjs:
     needs: build
