--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "outDir": "./dist/esm",
-    "rootDir": "./src"
+    "outDir": "./dist/esm"
   },
   "include": ["src/**/*"]
 }
