--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "build:esm": "tsc -p tsconfig.esm.json",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json && renamer --find js --replace cjs \"dist/cjs/**\"",
     "build": "rm -rf dist/ && yarn build:esm && yarn build:cjs",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -52,6 +52,7 @@
     "eslint": "^9.18.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "renamer": "^5.0.2",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   }
