--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "author": "Dan Forsberg <dforsber@gmail.com>",
   "license": "MIT",
   "type": "module",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "exports": {
+    "require": "./dist/cjs/index.js",
+    "import": "./dist/esm/index.js"
+  },
   "files": [
     "dist/*"
   ],
@@ -19,17 +23,13 @@
     }
   },
   "private": false,
-  "exports": {
-    "import": "./dist/esm/index.js",
-    "require": "./dist/cjs/index.cjs"
-  },
   "scripts": {
     "release": "standard-version -a",
     "all": "yarn format && yarn lint && yarn build && yarn test",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "build:cjs": "tsc -p tsconfig.cjs.json && renamer --find js --replace cjs \"dist/cjs/**\"",
+    "build:esm": "esbuild src/*.ts --bundle --platform=node --format=esm --outdir=dist/esm --external:cpu-features --external:ssh2",
+    "build:cjs": "esbuild src/*.ts --bundle --platform=node --format=cjs --outdir=dist/cjs --external:cpu-features --external:ssh2",
     "build": "rm -rf dist/ && yarn build:esm && yarn build:cjs",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -49,10 +49,11 @@
     "@types/ssh2": "^1.15.4",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
+    "esbuild": "^0.24.2",
+    "esbuild-node-externals": "^1.16.0",
     "eslint": "^9.18.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "renamer": "^5.0.2",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   }
