--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
   "scripts": {
     "release": "standard-version -a",
     "all": "yarn format && yarn lint && yarn build && yarn test",
-    "example:esm": "tsx examples/esm/example.mts",
-    "example:cjs": "node examples/cjs/example.cjs",
+    "gentestkeys": "echo 'y' | ./examples/generate-test-keys.sh",
+    "example:esm": "yarn gentestkeys && tsx examples/esm/example.mts",
+    "example:cjs": "yarn gentestkeys && node examples/cjs/example.cjs",
     "lint": "eslint -c eslint.config.cjs src",
     "lint:fix": "eslint -c eslint.config.cjs src --fix",
     "build:esm": "esbuild src/index.ts --bundle --platform=node --format=esm --outdir=dist/esm --external:cpu-features --external:ssh2",
@@ -44,7 +45,7 @@
     "build:types": "tsc -p tsconfig.types.json",
     "build": "rm -rf dist/ && yarn build:esm && yarn build:cjs && yarn build:types && yarn build:package-json",
     "build:package-json": "mkdir -p dist/cjs dist/esm && echo '{\"type\":\"commonjs\"}' > dist/cjs/package.json && echo '{\"type\":\"module\"}' > dist/esm/package.json",
-    "test": "jest",
+    "test": "rm -f ssh-store.json && jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "dev": "tsc -w",
