--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "ssh2": "^1.16.0",
     "standard-version": "^9.5.0"
   },
